2014-05-08  polarnik  <owasp@ya.ru>

	* LoaderFunction.cs:
	* LoaderEDocType.cs: 

2014-05-08  polarnik  <owasp@ya.ru>

	* LoaderAll.cs: 

2014-03-29  polarnik  <owasp@ya.ru>

	* LoaderAll.cs: Suppport Windows Authentification. Добавлена
	  поддержка Windows-аутентификации при загрузке ISBL-кода из
	  базы данных.

2014-03-29  polarnik  <owasp@ya.ru>

	* LoaderAll.cs:
	* LoaderRoute.cs:
	* LoaderReport.cs:
	* LoaderWizard.cs:
	* LoaderScript.cs:
	* LoaderCommon.cs:
	* LoaderFunction.cs:
	* LoaderEDocType.cs:
	* LoaderReference.cs:
	* LoaderUserScript.cs:
	* LoaderUserSearch.cs:
	* LoaderRouteBlock.cs:
	* LoaderReportIntegrate.cs:
	* LoaderPerfomanceIndicator.cs: 

2014-03-29  polarnik  <owasp@ya.ru>

	* ChangeLog:
	* LoaderAll.cs:
	* LoaderRoute.cs:
	* LoaderReport.cs:
	* LoaderWizard.cs:
	* LoaderScript.cs:
	* LoaderCommon.cs:
	* LoaderFunction.cs:
	* LoaderEDocType.cs:
	* LoaderReference.cs:
	* LoaderUserScript.cs:
	* LoaderUserSearch.cs:
	* LoaderRouteBlock.cs:
	* WizardTextSample.txt:
	* LoaderReportIntegrate.cs:
	* LoaderPerfomanceIndicator.cs: 

2014-03-29  polarnik  <owasp@ya.ru>

	* LoaderEDocType.cs: загружаются только реквизиты с вычислениями, реквизиты без вычислений не загружаются.
	* LoaderReference.cs: загружаются только реквизиты с вычислениями, реквизиты без вычислений не загружаются.

2014-03-09  polarnik  <owasp@ya.ru>

	* LoaderAll.cs:
	* LoaderReport.cs:
	* LoaderScript.cs:
	* LoaderWizard.cs:
	* LoaderCommon.cs:
	* LoaderFunction.cs:
	* LoaderReference.cs:
	* LoaderUserSearch.cs:
	* LoaderRouteBlock.cs:
	* LoaderUserScript.cs: 

2014-03-09  polarnik  <owasp@ya.ru>

	* LoaderAll.cs:
	* LoaderReport.cs:
	* LoaderScript.cs:
	* LoaderWizard.cs:
	* LoaderCommon.cs:
	* LoaderEDocType.cs:
	* LoaderFunction.cs:
	* LoaderReference.cs:
	* LoaderUserSearch.cs:
	* LoaderUserScript.cs:
	* LoaderRouteBlock.cs:
	* LoaderReportIntegrate.cs: 
