@@ -1,3 +1,7 @@
+2014-05-09  polarnik  <owasp@ya.ru>
+
+	* LoaderCommon.cs: 
+
 2014-05-08  polarnik  <owasp@ya.ru>
 
 	* LoaderFunction.cs:
